--- a/index.html
+++ b/index.html
@@ -9,25 +9,42 @@
   <title>Frontend Mentor | Ping coming soon page</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="body">
+    <main class="main">
+        <h1><img src="./assets/img/logo.svg" alt=""></h1>
 
-  We are launching soon!
+        <h2 class="subtitle"><span class="subtitle--color">We are launching</span> soon!</h2>
 
-  Subscribe and get notified
+        <p>Subscribe and get notified</p>
 
-  Notify Me
+        <div class="container__email">
+            <input id="input-email" class="box input__email" type="email" placeholder="Your email address...">
+            <p id="msg-error" class="email__error hidden">Please provide a valid email address.</p>
+            <button id="btn" class="box btn">Notify Me</button>
+        </div>
 
-  &copy; Copyright Ping. All rights reserved.
+        <img class="img" src="./assets/img/illustration-dashboard.png" alt="">
 
-  <footer>
+        <div class="social__medias">
+            <a href="#"><i class="icons fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="icons fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="icons fa-brands fa-instagram"></i></a>
+        </div>
+
+        <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
+    </main>
+
+  <footer class="footer">
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io/profile/FernandoChurros" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/FernandoChurros" target="_blank">Fernando Telles</a>.
     </p>
   </footer>
+
+  <script src="./assets/app/main.js"></script>
 </body>
 </html>
