--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="body">
     <main class="main">
-        <h1><img src="./assets/img/logo.svg" alt=""></h1>
+        <h1><img src="./assets/img/logo.svg" alt="Logo da Empresa Ping."></h1>
 
         <h2 class="subtitle"><span class="subtitle--color">We are launching</span> soon!</h2>
 
@@ -30,9 +30,9 @@
         <img class="img" src="./assets/img/illustration-dashboard.png" alt="">
 
         <div class="social__medias">
-            <a href="#"><i class="icons fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="icons fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="icons fa-brands fa-instagram"></i></a>
+            <a href="#" aria-label="Facebook"><i class="icons fa-brands fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="icons fa-brands fa-twitter"></i></a>
+            <a href="#" aria-label="Instagam"><i class="icons fa-brands fa-instagram"></i></a>
         </div>
 
         <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
